# Ray-Tracing-Cpp

./: .gitignore  CMakeLists.txt  README.md  all.sh  build.sh  clean.sh  run.sh  test.sh
include/: canvas.h  game.h
include/data_structures/: color.h  matrix.h  tuples.h
src/: canvas.cpp  game.cpp  main.cpp
src/data_structures/: color.cpp  matrix.cpp  tuples.cpp
tests/unit/: canvas.cpp
tests/unit/data_structures/: color.cpp  matrix.cpp  tuples.cpp
